tests/suite/manifests/longevity-waf/appolicy.yaml
apiVersion: appprotect.f5.com/v1
kind: APPolicy
metadata:
  name: attack-signatures-blocking
spec:
  policy:
    name: attack-signatures-blocking
    template:
      name: POLICY_TEMPLATE_NGINX_BASE
    applicationLanguage: utf-8
    enforcementMode: blocking
    response-pages:
    - responseStatusCode: "403"
      responseType: default
      type: default
    signature-sets:
    - name: All Signatures
      block: true
      alarm: true
    cookies:
    - name: "*"
      attackSignaturesCheck: true
      enforcementType: enforce
      maskValueInLogs: false
