tests/suite/manifests/longevity-waf/wafpolicy-plm.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: WAFPolicy
metadata:
  name: gateway-waf-plm
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  type: PLM
  policyRef:
    apPolicyRef:
      name: attack-signatures-blocking
  securityLogs:
  - logRef:
      apLogConfRef:
        name: log-illegal
    destination:
      type: stderr
